Fix end page overflow

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -234,6 +234,10 @@ footer section#links ul {
 footer section#credits {
     text-align: center;
     font-size: small;
+
+    & p {
+      margin-block-end: 0;
+    }
 }
 
 
